Swap controller doc generate and variable name convention fix
